--- a/run.ipynb
+++ b/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "0e4c76f9-b233-4d64-b23b-e10d7e22c719",
    "metadata": {},
    "outputs": [
@@ -30,26 +30,26 @@
       "+---------+--------+\n",
       "|InvoiceNo|count(1)|\n",
       "+---------+--------+\n",
-      "|   536378|     152|\n",
-      "|   536380|       8|\n",
-      "|   536437|      48|\n",
-      "|   536488|     272|\n",
-      "|   536508|      16|\n",
-      "|   536400|       8|\n",
-      "|   536527|     112|\n",
-      "|   536404|     224|\n",
-      "|   536524|      32|\n",
-      "|   536412|     640|\n",
-      "|   536477|     112|\n",
-      "|   536538|     240|\n",
-      "|   536395|     112|\n",
-      "|   536394|      88|\n",
-      "|   536534|      40|\n",
-      "|   536405|       8|\n",
-      "|   536423|      72|\n",
-      "|   536537|      88|\n",
-      "|   536366|      16|\n",
-      "|   536533|      48|\n",
+      "|   536821|      23|\n",
+      "|   537381|      24|\n",
+      "|   538809|      11|\n",
+      "|   538878|       8|\n",
+      "|   539048|       1|\n",
+      "|   539334|      10|\n",
+      "|   540168|      51|\n",
+      "|   540251|       1|\n",
+      "|   540260|      41|\n",
+      "|   540954|      26|\n",
+      "|   541864|      18|\n",
+      "|   543130|       4|\n",
+      "|   543166|      32|\n",
+      "|   536378|      19|\n",
+      "|   536380|       1|\n",
+      "|   536437|       6|\n",
+      "|   537159|      28|\n",
+      "|   537204|      32|\n",
+      "|   537359|       9|\n",
+      "|   539597|       2|\n",
       "+---------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -78,26 +78,26 @@
       "+---------+--------------+-----+\n",
       "|StockCode|       Country|total|\n",
       "+---------+--------------+-----+\n",
-      "|    21788|United Kingdom|   60|\n",
-      "|    22042|United Kingdom|   25|\n",
-      "|    22539|        France|    9|\n",
-      "|    22154|United Kingdom|  116|\n",
-      "|    85078|         Italy|    1|\n",
-      "|   85034C|         Italy|    1|\n",
       "|    22768|United Kingdom|  221|\n",
       "|    16238|United Kingdom|   69|\n",
       "|    22916|United Kingdom|  187|\n",
-      "|        M|United Kingdom|  251|\n",
-      "|    21704|United Kingdom|  179|\n",
-      "|   35271S|United Kingdom|    2|\n",
-      "|   90128B|United Kingdom|    1|\n",
       "|    70007|United Kingdom|   55|\n",
-      "|    22242|       Germany|    5|\n",
-      "|    72741|United Kingdom|  227|\n",
-      "|   15060B|United Kingdom|   79|\n",
-      "|   84534B|United Kingdom|    5|\n",
       "|    21816|United Kingdom|    9|\n",
-      "|   85232B|United Kingdom|    9|\n",
+      "|   84596E|United Kingdom|   35|\n",
+      "|    22573|United Kingdom|  141|\n",
+      "|    20972|United Kingdom|  527|\n",
+      "|    22438|United Kingdom|   68|\n",
+      "|    22297|United Kingdom|  226|\n",
+      "|    21210|United Kingdom|  286|\n",
+      "|    22565|United Kingdom|  105|\n",
+      "|   90059C|United Kingdom|    2|\n",
+      "|    22963|United Kingdom|  170|\n",
+      "|   84030E|United Kingdom|  264|\n",
+      "|    20713|United Kingdom|  381|\n",
+      "|    22694|United Kingdom|  306|\n",
+      "|    21137|United Kingdom|  299|\n",
+      "|    22423|United Kingdom| 1426|\n",
+      "|    22466|United Kingdom|  118|\n",
       "+---------+--------------+-----+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -114,30 +114,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------+-----+------+--------------------+\n",
-      "|StockCode|total| total|         repartition|\n",
-      "+---------+-----+------+--------------------+\n",
-      "|    21788|   60|348083|1.723726812283277...|\n",
-      "|    22042|   25|348083|7.182195051180322E-5|\n",
-      "|    22539|    9|  8166|0.001102130786186...|\n",
-      "|    22154|  116|348083|3.332538503747669...|\n",
-      "|    85078|    1|   747|0.001338688085676...|\n",
-      "|   85034C|    1|   747|0.001338688085676...|\n",
-      "|    22478|   69|348083|1.982285834125768...|\n",
-      "|    22844|  272|348083| 7.81422821568419E-4|\n",
-      "|    22389|   30|348083|8.618634061416386E-5|\n",
-      "|    84821|   33|348083|9.480497467558024E-5|\n",
-      "|    22837|    1|  2433|4.110152075626798E-4|\n",
-      "|    21030|    1|   605|0.001652892561983471|\n",
-      "|    22768|  221|348083|6.349060425243405E-4|\n",
-      "|    16238|   69|348083|1.982285834125768...|\n",
-      "|    22916|  187|348083|5.372281898282881E-4|\n",
-      "|        M|  251|348083|7.210923831385043E-4|\n",
-      "|    21704|  179|348083|5.142451656645111E-4|\n",
-      "|   35271S|    2|348083|5.745756040944258E-6|\n",
-      "|   90128B|    1|348083|2.872878020472129E-6|\n",
-      "|   85049G|   17|  8879|0.001914630025903818|\n",
-      "+---------+-----+------+--------------------+\n",
+      "+---------+--------------------+-----+-------+\n",
+      "|StockCode|         repartition|total|Country|\n",
+      "+---------+--------------------+-----+-------+\n",
+      "|    23117|1.126252956414010...| 8879|Germany|\n",
+      "|    84836|1.126252956414010...| 8879|Germany|\n",
+      "|    22187|1.126252956414010...| 8879|Germany|\n",
+      "|    22717|1.126252956414010...| 8879|Germany|\n",
+      "|    22576|2.252505912828021...| 8879|Germany|\n",
+      "|    21015|1.126252956414010...| 8879|Germany|\n",
+      "|    22186|1.126252956414010...| 8879|Germany|\n",
+      "|    23400|1.126252956414010...| 8879|Germany|\n",
+      "|    72816|1.126252956414010...| 8879|Germany|\n",
+      "|   85061W|1.126252956414010...| 8879|Germany|\n",
+      "|   35471D|1.126252956414010...| 8879|Germany|\n",
+      "|   35599D|3.378758869242032E-4| 8879|Germany|\n",
+      "|    23075|1.126252956414010...| 8879|Germany|\n",
+      "|    23483|1.126252956414010...| 8879|Germany|\n",
+      "|    23515|4.505011825656042...| 8879|Germany|\n",
+      "|    23403|1.126252956414010...| 8879|Germany|\n",
+      "|   47518F|1.126252956414010...| 8879|Germany|\n",
+      "|   90160D|1.126252956414010...| 8879|Germany|\n",
+      "|   84806A|1.126252956414010...| 8879|Germany|\n",
+      "|    23552|4.505011825656042...| 8879|Germany|\n",
+      "+---------+--------------------+-----+-------+\n",
       "only showing top 20 rows\n",
       "\n",
       "+----------+-----------------+\n",
@@ -152,7 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.9/socket.py:775: ResourceWarning: unclosed <socket.socket fd=63, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=6, laddr=('127.0.0.1', 54890), raddr=('127.0.0.1', 33653)>\n",
+      "/opt/conda/lib/python3.9/socket.py:775: ResourceWarning: unclosed <socket.socket fd=63, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=6, laddr=('127.0.0.1', 37210), raddr=('127.0.0.1', 40991)>\n",
       "  self._sock = None\n",
       "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n",
       "."
@@ -171,7 +171,7 @@
      "text": [
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 4 tests in 264.491s\n",
+      "Ran 4 tests in 259.926s\n",
       "\n",
       "OK\n"
      ]
